Update solutions naming

--- a/cars/cars.vcxproj
+++ b/cars/cars.vcxproj
@@ -22,9 +22,9 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{EC48A319-C4A3-461D-9515-0338F14C290F}</ProjectGuid>
-    <RootNamespace>hw-6</RootNamespace>
+    <RootNamespace>cars</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>hw-6</ProjectName>
+    <ProjectName>cars</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
