--- a/agario/agario.vcxproj
+++ b/agario/agario.vcxproj
@@ -22,9 +22,9 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{46839AED-1E10-4768-9605-4C1178E753F5}</ProjectGuid>
-    <RootNamespace>hw-6</RootNamespace>
+    <RootNamespace>agario</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>hw-6</ProjectName>
+    <ProjectName>agario</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
